less_45/ingress/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: proxy
        image: nginx
        ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
